# Rust-course

beginner/02-variables/src/: main.rs
beginner/04_constant_and_static_variables/: Cargo.toml
beginner/04_constant_and_static_variables/src/: main.rs
beginner/05_functions/src/: main.rs
beginner/06_control_flow/src/: main.rs
beginner/07_ownership/src/: main.rs
beginner/08_borrowing/src/: main.rs
beginner/09_slices/src/: main.rs
beginner/10_strings/: Cargo.toml
beginner/10_strings/src/: main.rs
beginner/11_structs/src/: main.rs
beginner/12_tuple_and_unit_structs/: Cargo.toml
beginner/12_tuple_and_unit_structs/src/: main.rs
beginner/13_enums/src/: main.rs
beginner/14_matching/: Cargo.toml
beginner/14_matching/src/: main.rs
beginner/15_option_enum/src/: main.rs
beginner/16_result_enum/src/: main.rs
beginner/17_vectors/src/: main.rs
beginner/18_structure_project/: Cargo.toml
beginner/18_structure_project/src/: lib.rs  main.rs
beginner/19_modules/src/: auth_utils.rs  lib.rs  main.rs
beginner/20_cargo_features/: Cargo.toml
beginner/20_cargo_features/src/: lib.rs
beginner/21_cargo_workspaces/: Cargo.toml
beginner/21_cargo_workspaces/blog_api/src/: main.rs
beginner/21_cargo_workspaces/blog_shared/: Cargo.toml
beginner/21_cargo_workspaces/blog_shared/src/: lib.rs
beginner/21_cargo_workspaces/blog_web/src/: main.rs
beginner/22_unit_tests/src/: lib.rs
beginner/23_integration_tests/src/: lib.rs
beginner/23_integration_tests/tests/: savings_account.rs
beginner/hello_world/src/: main.rs
(+1 files in other folders)
