[package]
name = "cargo_features"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"], optional = true }
rgb = { version = "0.8.34", optional = true }

[features]
# Estableciendo que por defecto el paquete tenga la feature color habilitada.
default = ["color"]
# La dependencia rgb se incluye cuando se habilita la feature color
color = ["dep:rgb"]
# La dependencia serde se incluye cuando se habilita la feature shapes
# Si la depedencia rgb ya fue habilitada por algo más, tambien se habilitara la feature serde de la misma
shapes = ["color", "dep:serde", "rgb?/serde"]
